@@ -1,6 +1,7 @@
-2004/11/02 Matthew Zimmerman <zubov@users.sourceforge.net>
+2004/6/28 Matthew Zimmerman <zubov@users.sourceforge.net>
 * Fixed a minor bug in ArchiveType's where directories without files 
   could cause a NullPointerException, Thanks to akrog for the report
+* Fixed rename(), it would leave old directories behind, thanks Cy8er
 
 2004/06/09 Morgan Christiansson <drftpd@mog.se>
 * Added hideIps=true setting in drftpd.conf for disabling logging of ips.
